new repository layer methods
