# fstickbackend/registry-service/src/main/java/ru/fstick/registry_service/dto/api/request/commit/CommitPluginRequest.java
@@ -4,6 +4,7 @@ import jakarta.validation.constraints.NotBlank;
 import lombok.Data;
 
 import java.util.List;
+import java.util.UUID;
 
 @Data
 public class CommitPluginRequest {
@@ -11,6 +12,8 @@ public class CommitPluginRequest {
     private String name;
     @NotBlank
     private String description;
+    @NotBlank
+    private UUID authorId;
     private String category;
     private List<String> tags;
     private List<String> keys;
